--- a/src/app/components/nuevo-componente/nuevo-componente.html
+++ b/src/app/components/nuevo-componente/nuevo-componente.html
@@ -1,3 +1,24 @@
+
+<hr/>
+
 <h1>{{CreacionDeComponente}}</h1>
 
 <h2>{{Descripcion}}</h2>
+
+<div class="listaBidireccional">
+
+    <h3>Creacion de una lista en base a una entrada por bidireccion.</h3>
+
+    <ul>
+
+        <li>Objeto 1</li>
+        <li>Objeto 2</li>
+
+    </ul>
+
+    <h4>{{nuevoObjeto}}</h4>
+
+    <input [(ngModel)]="nuevoObjeto" type="text" placeholder="Agregar un nuevo objeto"/>
+    <button>Añadir</button>
+
+</div>
